--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>Техномарт-Каталог</title>
+<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link href="css/normalize.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header>
 <!---------------------------------Верхнее меню хедера----------------------------------->
-     <div>
+     <div class="top-menu">
 <!----------------------------------------------Логотип-------------------------------------------------->
          <a href="./index.html">
            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="136.5" height="21.59" viewBox="0 0 136.5 21.59">
@@ -23,35 +26,44 @@
            </svg>
          </a>
 <!-----------------------------------------поиск------------------------------------------------->
-         <div>
+         <div class="top-navigation">
+           <form action="https://echo.htmlacademy.ru">
            <!---------- иконка поиска--------->
-           <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
-           </svg>Поиск:<input type="search">
+           <label for="search">
+           <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+            <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+           </svg>
+           Поиск:</lable><input type="search" id="search">
+           </form>
          </div>
 <!----------------------------------------закладки---------------------------------------------->
-         <div>
-           <a href="">
-           <!-- иконка закладок-->
-           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
-           <path fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/>
-           </svg>Закладки:</a><input type="text" value="0">
+         <div class="top-navigation">
+           <a href="#">
+            <label for="bookmark">
+           <!-- ---------иконка закладок------->
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
+                <path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/>
+            </svg>
+           Закладки:</lable></a><input type="text" value="0" id="bookmark">
          </div>
 <!----------------------------------------Корзина------------------------------------------------------->
-         <div>
-           <a href="">
+         <div class="top-navigation">
+           <a href="#">
            <!-----------иконка Корзины-------->
-           <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"/><circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"/><path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
-           </svg>Корзина:</a><input type="text" value="10">
+           <label for="cart">
+           <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5"/><circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5"/><path fill="#6a7180" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
+           </svg>
+           Корзина:</lable></a><input type="text" value="10" id="cart">
          </div>
 <!---------------------------------------оформление заказа-------------------------------------------->
-         <a href="">Оформить заказ</a>
+         <a href="#">Оформить заказ</a>
      </div>
         
 <!------------------------------------- СРЕДНЯЯ ЧАСТЬ ХЕДЕРА ------------------------------->
-     <div>
-         <i>Интернет-магазин строительных материалов и инструментов для ремонта </i>
+     <div class="middle-navigation">
+         <div class="pagename">Интернет-магазин строительных материалов и инструментов для ремонта</div>
          <!--------------------------контактная информация------------------------------------>
-         <div>
+         <div class="telefon">
            <!------------ иконка телефона ------------------------>
            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19">
             <path fill="#B7BFC8" d="M15.572 18.985h-.941c-4.129-.488-7.157-2.408-9.359-4.864C3.062 11.66 1.318 8.492.978 4.228V3.084c.078-.774.459-1.304.898-1.757C2.425.766 3.25.044 4.002.019c.554-.018 1.5.38 1.879.899.329.446.504 1.339.656 2.003.154.671.505 1.643.408 2.289-.148 1.007-1.487 1.434-1.879 2.166 1.307 3.135 3.443 5.439 6.293 7.031.715-.392 1.346-1.572 2.332-1.595.359-.009.818.178 1.184.286.402.121.75.275 1.104.408.596.224 1.648.521 2.004 1.021.365.513.57 1.356.49 1.879-.164 1.041-1.879 2.197-2.901 2.579z"/>
@@ -62,7 +74,7 @@
 <!-----------------------------------------МЕНЮ ПОЛЬЗОВАТЕЛЯ----------------------------------------------->
               
 <!----------------------------------------------логин------------------------------------------------->
-         <div>
+         <div class="user-menu">
            <a href="">
             <!-----------------иконка входа ----------------------------------->
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18"><path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
@@ -81,20 +93,22 @@
          </div>
 <!----------------------------------------меню личной информации-------------------------------->
          <div>
-           <a  href="">Мои заказы</a>
+           <a  href="#">Мои заказы</a>
            <span>.</span>
-           <a  href="">Личный кабинет</a>
+           <a  href="#">Личный кабинет</a>
          </div>
      </div>
 <!-------------------------------------Нижнее меню хедера ------------------------------>
-     <nav>
-         <a href="./index.html">Главная</a>
-         <a href="">Компания</a>
-         <a>Каталог</a>
-         <a href="">Новости</a>
-         <a href="">Спецпредложения</a>
-         <a href="">Доставка</a>
-         <a href="">Контакты</a>
+     <nav class="main-navigation">
+         <ul class="site-navigation">
+            <li> <a class="site-navigation">Главная</a></li>
+            <li> <a href="#">Компания</a></li>
+            <li> <a href="./catalog.html">Каталог</a></li>
+            <li> <a href="#">Новости</a></li>
+            <li> <a href="#">Спецпредложения</a></li>
+            <li> <a href="#">Доставка</a></li>
+            <li> <a href="#">Контакты</a></li>
+         </ul>
      </nav>
   </header>
 <!---------------------------------------------------------- КОНТЕНТ---------------------------------------->
@@ -115,21 +129,21 @@
          <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
            <path fill="#C1C6CE" d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"/>
          </svg>
-         <a href="">
+         <a href="#">
          Каталог
          <!--стрелка вправо -->
            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
             <path fill="#C1C6CE" d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"/>
            </svg>
          </a>
-         <a href="">
+         <a href="#">
          Инструмент
          <!--стрелка вправо -->
            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
             <path fill="#C1C6CE" d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"/>
            </svg>
          </a>
-         <a href="">
+         <a href="#">
          Перфораторы
          </a>
      </div>
@@ -146,11 +160,11 @@
 <!-------------------------сортировка------------------------------------------>
      <section>
          <p>сортировка:<p>
-         <a href="">   по цене</a>
-         <a href="">   по типу</a>
-         <a href="">   по функционалу</a>
-         <a href="">   по возрастанию</a>
-         <a href="">   по убыванию</a>
+         <a href="#">   по цене</a>
+         <a href="#">   по типу</a>
+         <a href="#">   по функционалу</a>
+         <a href="#">   по возрастанию</a>
+         <a href="#">   по убыванию</a>
      </section>
 <!---------------------------------- колонка выбора ПРОИЗВОДИТЕЛИ-------------------------->
      <section>
@@ -216,7 +230,7 @@
             </li>
          </ul>
      </section>
-     <a href="">ПОКАЗАТЬ</a>
+     <a href="#">ПОКАЗАТЬ</a>
 <!-------------------------------------КАТАЛОГ ТОВАРОВ--------------------------------------->
      <section>
 <!----------------------------окно товара 1----------------------------->
@@ -228,8 +242,8 @@
             <div>15500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!----------------------------окно окно товара 2----------------------------->
@@ -241,8 +255,8 @@
             <div>25500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!---------------------------окно окно товара 3------------------------------->
@@ -254,8 +268,8 @@
             <div>12500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!--------------------------окно окно товара 4-------------------------------->
@@ -267,8 +281,8 @@
             <div>15500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!------------------------окно окно товара 5---------------------------------->
@@ -281,8 +295,8 @@
             <div>25500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!------------------------окно окно товара 6---------------------------------->
@@ -293,8 +307,8 @@
             <div>12500 Р.</div>
            </div>
            <div>
-                <a href="">купить</a>
-                <a href="">в закладки</a>
+                <a href="#">купить</a>
+                <a href="#">в закладки</a>
            </div>
          </article>
 <!-------------------------окно окно товара 7--------------------------------->
@@ -307,8 +321,8 @@
             <div>15500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!--------------------------окно окно товара 8--------------------------------->
@@ -320,8 +334,8 @@
             <div>25500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!--------------------------окно окно товара 9--------------------------------->
@@ -332,16 +346,16 @@
             <div>12500 Р.</div>
            </div>
            <div>
-            <a href="">купить</a>
-            <a href="">в закладки</a>
+            <a href="#">купить</a>
+            <a href="#">в закладки</a>
            </div>
          </article>
 <!----------------переход на следущую страницу каталога--------------------------------->
          <div>
-           <a href="">1</a>
-           <a href="">2</a>
-           <a href="">3</a>
-           <a href="">следущая</a>
+           <a >1</a>
+           <a href="#">2</a>
+           <a href="#">3</a>
+           <a href="#">следущая</a>
          </div>
      </section>
 <!------------------------------------------ТЕКСТОВЫЙ БЛОК--------------------------------->
@@ -351,16 +365,6 @@
             Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
             Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
          </p>
-     </section>
-<!--------------------------------------ПОПАП ТОВАР ДОБАВЛЕН В КОРЗИНУ--------------------------------->
-     <section>
-<!---------иконка галочким добавления товара в корзину ------------------------------>
-         <svg xmlns="http://www.w3.org/2000/svg" width="66" height="66" viewBox="0 0 66 66"><circle fill="#63A63E" cx="33" cy="33" r="33"/><path fill="#FFF" d="M49.641 21.066a1.003 1.003 0 0 0-1.414 0L29.788 39.504a1.003 1.003 0 0 1-1.414 0l-8.14-8.139a1.003 1.003 0 0 0-1.414 0L15.285 34.9a1.003 1.003 0 0 0 0 1.414l13.089 13.09a1.003 1.003 0 0 0 1.414 0l3.536-3.536 1.414-1.414 18.438-18.438a1.003 1.003 0 0 0 0-1.414l-3.535-3.536z"/>
-         </svg>
-         <h1>Товар добавлен в корзину!</h1>
-         <button>ОФОРМИТЬ ЗАКАЗ</button>
-         <button>ПРОДОЛЖИТЬ ПОКУПКИ</button>
-         <button>закрыть</button>
      </section>
   </main>
 <!------------------------------ ФУТЕР-------------------------------------------------------->
@@ -383,11 +387,11 @@
           </svg>
         </a>
         <ul>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
           <li><a>Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
      </section>
 <!--------------------------адрес + список------------------------------------------->
@@ -397,10 +401,10 @@
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
         </div>
         <ul>
-          <li><a href="">Материалы</a></li>
-          <li><a href="">Техника</a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a href="">Спецпредложения</a></li>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
         </ul>
         </section>
         <!-------------------нижняя линия на темном фоне-------------->
@@ -408,22 +412,22 @@
         <div>&copy; 2010–2019 Компания &laquo;Техномарт&raquo; Все права защищены</div>
         <ul>
           <li> <!------------иконка ВК --------------->
-            <h3 class="visually-hidden"> Вконтакте наша группа</h3>
-            <a href="">
+            <span class="visually-hidden"> Вконтакте наша группа</span>
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/>
                 </svg>
             </a>
           </li>
           <li> <!-----------иконка ФБ ------------------>
-            <h3 class="visually-hidden"> ФейсБук наша группа</h3>
-            <a href="">
+            <span class="visually-hidden"> ФейсБук наша группа</span>
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
                     </svg>
             </a>
           </li>
           <li><!------------иконка Инста ----------------->
-            <h3 class="visually-hidden"> Инстаграмм наша группа</h3>
-            <a href="">
+            <span class="visually-hidden"> Инстаграмм наша группа</span>
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/>
                 </svg>
             </a>
@@ -439,5 +443,15 @@
         </div>
      </section>
   </footer>
+  <!--------------------------------------ПОПАП ТОВАР ДОБАВЛЕН В КОРЗИНУ--------------------------------->
+       <section>
+  <!---------иконка галочким добавления товара в корзину ------------------------------>
+           <svg xmlns="http://www.w3.org/2000/svg" width="66" height="66" viewBox="0 0 66 66"><circle fill="#63A63E" cx="33" cy="33" r="33"/><path fill="#FFF" d="M49.641 21.066a1.003 1.003 0 0 0-1.414 0L29.788 39.504a1.003 1.003 0 0 1-1.414 0l-8.14-8.139a1.003 1.003 0 0 0-1.414 0L15.285 34.9a1.003 1.003 0 0 0 0 1.414l13.089 13.09a1.003 1.003 0 0 0 1.414 0l3.536-3.536 1.414-1.414 18.438-18.438a1.003 1.003 0 0 0 0-1.414l-3.535-3.536z"/>
+           </svg>
+           <h1>Товар добавлен в корзину!</h1>
+           <a href="#">ОФОРМИТЬ ЗАКАЗ</a>
+           <a href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a>
+           <button>закрыть</button>
+       </section>
 </body>
 </html>
