--- a/catalog.html
+++ b/catalog.html
@@ -27,35 +27,37 @@
            </svg>
          </a>
 <!-----------------------------------------поиск------------------------------------------------->
-         <div class="searchingform">
+        <div class="searchingform">
             <!---------- иконка поиска--------->
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-             <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+            <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
             </svg>
-           <form action="https://echo.htmlacademy.ru"  class="" id="serchout" method="POST">
-           <label for="search"><span class="visually=hidden"> Поиск:</span></lable>
-           <input type="search" id="search" name="search" class="search" placeholder="Поиск:">
-           </form>
-         </div>
+            <form action="https://echo.htmlacademy.ru"  class="" id="serchout" method="POST">
+            <label for="search"><span class="visually=hidden"> Поиск:</span>
+            </label>
+            <input type="search" id="search" name="search" class="search" placeholder="Поиск:">
+            </form>
+        </div>
 <!----------------------------------------закладки---------------------------------------------->
-         <div class="top-navigation">
-           <a href="#">
+        <div class="top-navigation">
+
             <label for="bookmark">
-           <!-- ---------иконка закладок------->
+            <a href="#">
+            <!-- ---------иконка закладок------->
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
-                <path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/>
+            <path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/>
             </svg>
-           Закладки:</lable><output type="text" value="0" id="cart">0</output></a>
-         </div>
+            Закладки:<output name="bookmark" id="bookmark">0</output></a></label>
+        </div>
 <!----------------------------------------Корзина------------------------------------------------------->
-         <div class="top-navigation">
-           <a href="#">
-           <!-----------иконка Корзины-------->
-           <label for="cart">
-           <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5"/><circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5"/><path fill="#6a7180" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
-           </svg>
-           Корзина:</lable><output type="text" value="10" id="cart">10</output></a>
-         </div>
+        <div class="top-navigation">
+            <!-----------иконка Корзины-------->
+            <label for="cart">
+            <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5"/><circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5"/><path fill="#6a7180" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
+            </svg>
+            Корзина:<output name="cart" id="cart">10</output></a></label>
+        </div>
 <!---------------------------------------оформление заказа-------------------------------------------->
          <a href="#" class="zakaz"><p>Оформить заказ</p></a>
      </div>
@@ -114,6 +116,7 @@
             <li> <a href="#">Доставка</a></li>
             <li> <a href="#">Контакты</a></li>
          </ul>
+         </div>
   </header>
 <!---------------------------------------------------------- КОНТЕНТ---------------------------------------->
   <main>
@@ -384,6 +387,7 @@
          </div>
      </section>
   </main>
+  <footer>
 <!------------------------------ ФУТЕР-------------------------------------------------------->
 <!------------------------------ верхняя часть футера------------------------------------------>
        <section class="main-footer">
@@ -430,7 +434,7 @@
             <li class="icons"> <!-- ----------иконка ВК --------------->
               <span class="visually-hidden"> Вконтакте наша группа</span>
               <a href="#">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15" preserveAspectRatio="meet"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/>
                 </svg>
               </a>
             </li>
